# server/api/carecenter/controllers/insurances/router.ts
@@ -2,4 +2,4 @@ import express from 'express';
 import controller from './controller';
 
 export default express.Router()
-    .get('/:id' , controller.services);
+    .get('/' , controller.insurances);
